force-app/main/default/objects/Kakao_Quick_Text__c/Kakao_Quick_Text__c.object-meta.xml
<CustomObject>
    <label>Kakao Quick Text</label>
    <nameField>
        <displayFormat>KQT-{000000}</displayFormat>
        <label>Kakao Quick Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kakao Quick Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>