force-app/main/default/objects/Kakao_Quick_Text__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>