force-app/main/default/objects/Kakao_Quick_Text__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>